[update] swagger docs embedded comment in go.file
